# Chicago

./: .clang-format  CMakelists.txt  README.md
chicago_compress_lib/: CMakeLists.txt
chicago_compress_lib/src/: ch_archive.c  ch_archive.h
chicago_parse_lib/: CMakeLists.txt
chicago_parse_lib/src/: ch_byte_reader.c  ch_byte_reader.h  ch_byte_writer.h  ch_dump.c  ch_dump.h  ch_field_reader.c  ch_field_reader.h  ch_save.c  ch_save.h  ch_save_internal.h  ch_sf_hl1.c  ch_sf_hl2.c  ch_sf_hl3.c
chicago_parse_lib/src/SDK/: built_in_descs.h  datamap.h
chicago_parse_lib/src/block_handlers/: ch_block_ents.c  ch_block_ents.h  ch_block_event_queue.c  ch_block_templates.c
chicago_parse_lib/src/custom_restore/: ch_activity.c  ch_activity.h  ch_ent_output.c  ch_ent_output.h  ch_utl_vector.c  ch_utl_vector.h  ch_variant.c  ch_variant.h
chicago_parse_lib/src/custom_restore/registration/: ch_reg.c  ch_reg.h  ch_reg_activity.c  ch_reg_decl.h  ch_reg_ent_output.c  ch_reg_utl_vector.c  ch_reg_variant.c
chicago_parse_lib/src/dump/: ch_cr_utl_vector.c  ch_dump.c  ch_dump.h  ch_dump_block_achievements.c  ch_dump_block_ai.c  ch_dump_block_commentary.c  ch_dump_block_entities.c  ch_dump_block_event_queue.c  ch_dump_block_physics.c  ch_dump_block_response_system.c  ch_dump_block_templates.c  ch_dump_cr_activity.c  ch_dump_cr_ent_output.c  ch_dump_cr_utl_vector.c  ch_dump_cr_variant.c  ch_dump_decl.h  ch_dump_fields.c  ch_dump_fns.h  ch_dump_hl1.c  ch_dump_hl2.c  ch_dump_hl3.c  ch_dump_misc.c  ch_dump_sav.c
chicago_parser_example/: CMakeLists.txt
chicago_parser_example/src/: main.c
chicago_parser_exe/: CMakeLists.txt
chicago_parser_exe/src/: ch_args.h  ch_inject.c  ch_inject.h  ch_recv.c  ch_recv.h  main.c
chicago_parser_lib/: CMakeLists.txt
chicago_parser_lib/src/: ch_byte_reader.c  ch_byte_reader.h  ch_save.c  ch_save.h  ch_save_internal.h  ch_sf_hl1.c  ch_sf_hl2.c  ch_sf_save_data.c
chicago_payload/: CMakeLists.txt
chicago_payload/src/: ch_ent_factory.c  ch_ent_factory.h  ch_payload_comm.c  ch_payload_comm.h  ch_payload_comm_shared.c  ch_payload_comm_shared.h  ch_search.c  ch_search.h  ch_send.c  ch_send.h  dll_main.c  entry.c
datamaps/: compare_datamaps.py  datamap_utils.py  datamaps.chic  datamaps.msgpack  files_to_archive.py  msgpack_to_json.py
msgpack/: CMakeLists.txt
msgpack/include/: ch_msgpack.h
shared/: ch_arena.h  ch_byte_array.h  ch_decompress.h
